--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,9 @@ repository = "https://github.com/mihneabuz/led_tree.git"
 
 [dependencies]
 colored = "2.0.0"
+serde_json = "1.0.91"
+tiny_http = "0.12.0"
+
+[[bin]]
+name = "christmas-tree"
+path = "src/main.rs"
