--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,11 @@ repository = "https://github.com/mihneabuz/led_tree.git"
 
 [dependencies]
 colored = "2.0.0"
+serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
+sysinfo = "0.27.2"
 tiny_http = "0.12.0"
+reqwest = { version = "0.11", features = ["blocking"] }
 
 [[bin]]
 name = "christmas-tree"
