--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,5 @@
 [package]
+edition = "2021"
 name = "led-tree-rs"
 version = "0.1.0"
 repository = "https://github.com/mihneabuz/led_tree.git"
@@ -9,6 +10,7 @@ serde_json = "1.0.91"
 sysinfo = "0.27.2"
 tiny_http = "0.12.0"
 reqwest = { version = "0.11", features = ["blocking"] }
+colored = "2.0.0"
 
 [[bin]]
 name = "christmas-tree"
