--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ repository = "https://github.com/mihneabuz/led_tree.git"
 
 [dependencies]
 colored = "2.0.0"
+serde = { version = "1.0.152", features = ["derive"] }
+serde_json = "1.0.91"
 
 [[bin]]
 name = "christmas-tree"
