--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ repository = "https://github.com/mihneabuz/led_tree.git"
 colored = "2.0.0"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
+sysinfo = "0.27.2"
 
 [[bin]]
 name = "christmas-tree"
